testdata/netpol-scrape.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: netpol-analyzer-external
  namespace: demo
  labels:
    app: netpol-analyzer
subsets:
  - addresses:
      - ip: "192.168.65.254"
    ports:
      - port: 9090
        name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: netpol-analyzer-external
  namespace: demo
  labels:
    app: netpol-analyzer
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9090
      targetPort: 9090
      name: metrics
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: netpol-analyzer
  namespace: demo
  labels:
    app: netpol-analyzer
spec:
  selector:
    matchLabels:
      app: netpol-analyzer
  endpoints:
    - port: metrics
      interval: 10s
